fix the z-index for context button in tree mode

--- a/src/scss/jsoneditor.scss
+++ b/src/scss/jsoneditor.scss
@@ -144,6 +144,7 @@ div {
         margin: 0;
         border: none;
         cursor: pointer;
+        z-index: auto;
         background: transparent url("./img/jsoneditor-icons.svg");
         &:focus {
           background-color: $jse-preview;
